@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
' use +, \#, - instead of icons for public, protected, private


package pygame {
  class Sprite {
    + update()
  }
  class Clock
  class Sound
}

class Bird extends GameSprite {
+ {static} Min_Speed : int
+ {static} Max_Speed : int
- speed : int
- time : int
+ update()
+ clone() : Bird
}
class Cloud extends GameSprite {
+ update()
+ clone() : Cloud
}
class Umbrella extends GameSprite{
+ {static} Min_Speed : int
+ {static} Max_Speed : int
+update()
+ clone : Umbrella
}
class Mountain extends GameSprite{
+update()
+clone : Mountain
}
class Jet extends GameSprite{
+ {static} Min_Speed : int
+ {static} Max_Speed : int
+update()
+clone() : Jet
}
class Missile extends GameSprite{
+ {static} Min_Speed : int
+ {static} Max_Speed : int
+update()
+clone() : Missile
}
class Player extends Sprite {
- move_up_sound : Sound
- move_down_sound : Sound
+ update(pressed_keys : boolean[])
+ stop_move_sounds()
}



Game --o Sprite : all_sprites "1..N"


Game --> Player : player "1"



class Game {
    - clock : Clock
    - screen : Surface
    - userQuits : boolean
    - initialize_game()
    - make_objects()
    - load_music_and_sound()
    - play_music()
    - process_event()
    - draw()
    - collision() : boolean
    - game_over() : boolean
    - keep_frame_rate()
    - update()
    + Game(factoryFlying, factoryLandscape)
    + play()
}

class FactorySprites {
    - periods : int[]
    - eventTypes : int[]
    - prototypes : GameSprite[]
    + make() : GameSprite
}

class GameSprite extends Sprite{
    + clone() : GameSprite
}





FactorySprites --o GameSprite : "1" prototypes "1..N"


Game --> FactorySprites : \n(factoryFlying, factoryLandscape)\n1..2


Player --> Sound : 1..2



' hidden positioning (for layout)
''' positioning
Player -[hidden]down-> Game
Sprite -[hidden]down-> Bird
Sprite -[hidden]down-> Cloud


@enduml